--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animation": "^4.0.0-beta.8",
     "@angular/animations": "~10.1.2",
-    "@angular/common": "~10.1.2",
+    "@angular/cdk": "^11.0.1",
+    "@angular/common": "^10.1.6",
     "@angular/compiler": "~10.1.2",
-    "@angular/core": "~10.1.2",
+    "@angular/core": "^10.1.6",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~10.1.2",
+    "@angular/material": "^11.0.1",
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
